# rlm-rs

./: Cargo.toml  FIX_RLM_RS_PLAN.md  FIX_RLM_RS_PLAN_V2.md  README.md  interesting_file.py
crates/rlm_agent/: Cargo.toml
crates/rlm_agent/src/: lib.rs  main.rs  tools.rs
crates/rlm_chat/: Cargo.toml
crates/rlm_chat/src/: main.rs
crates/rlm_server/: Cargo.toml
crates/rlm_server/src/: handlers.rs  main.rs  types.rs
src/: error.rs  lib.rs  parsing.rs  prompts.rs  rlm.rs  types.rs
