[package]
name = "rlm_agent"
version = "0.1.0"
edition = "2021"
description = "Tool-use agent harness for RLM"
license = "MIT"

[[bin]]
name = "rlm_agent"
path = "src/main.rs"

[lib]
name = "rlm_agent"
path = "src/lib.rs"

[dependencies]
# RLM core
rlm = { path = "../..", package = "rlm-rs" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP for web_fetch tool
reqwest = { version = "0.12", features = ["json"] }

# Readline
rustyline = "12"
