[package]
name = "rlm_server"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible API server for RLM"
license = "MIT"

[[bin]]
name = "rlm_server"
path = "src/main.rs"

[dependencies]
rlm = { package = "rlm-rs", path = "../.." }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
